add wordpress image style

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,6 +33,7 @@
 @use 'components/_footer';
 @use 'components/_go-top';
 @use 'components/_plugins';
+@use 'components/wordpress';
 
 // LAYOUT
 @use 'layout/_home';
