--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -10,6 +10,10 @@ $text-color: rgba(0,0,0,.9);
 $muted-color: rgba(0,0,0,.5);
 $border-color: #F0F0F0;
 
+$info-color: #03A9F4;
+$danger-color: #F44336;
+$success-color: #4CAF50;
+
 // SIZES
 $sizes: (
   xs: pxrem(4px),
