--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,6 +32,7 @@
 @use 'components/_backdrop';
 @use 'components/_footer';
 @use 'components/_go-top';
+@use 'components/custom-info';
 @use 'components/_plugins';
 @use 'components/wordpress';
 
