--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -48,6 +48,15 @@ samp {
   font-size: 1em; /* 2 */
 }
 
+code {
+  background: #F0F0F0;
+  border-radius: 4px;
+  color: rgba(0, 0, 0, .9);
+  font-size: .85rem;
+  font-weight: 500;
+  padding: .2rem .3rem;
+}
+
 small {
   font-size: 80%;
 }
