--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -54,6 +54,12 @@ ol, ul {
   padding-left: 1rem;
 }
 
+h2 code {
+  background-color: transparent;
+  color: inherit;
+  font-size: inherit;
+}
+
 code {
   background: #F0F0F0;
   border-radius: 4px;
