--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -107,8 +107,8 @@
         line-height: 2.5;
         display: block;
         @include mq(lg) {
-          line-height: 3;
-          padding: 0 map-get($sizes, l);
+          line-height: 1.5;
+          padding: map-get($sizes, s) map-get($sizes, l);
           transition: background .2s ease-out;
           &:hover {
             background: rgba($secondary-color, 0.02);
@@ -142,6 +142,7 @@
       font-size: .95rem;
       @include mq(lg) {
         font-size: 1rem;
+        line-height: 1.35;
         font-weight: 700;
         background: $tertiary-color;
         display: block;
