change color active menu

--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -111,7 +111,7 @@
                 left: 0;
                 width: map-get($sizes, xs);
                 height: 100%;
-                background: $success-color;
+                background: $primary-color;
                 display: flex;
                 position: absolute;
                 top: 0;
