--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -124,7 +124,8 @@
         text-decoration: none;
         font-size: .9rem;
         color: $text-color;
-        line-height: 2.5;
+        line-height: 1.5;
+        padding: .25rem 0;
         display: block;
         @include mq(lg) {
           line-height: 1.5;
