--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -54,8 +54,10 @@ ol, ul {
   padding-left: 1rem;
 }
 
-h2 code {
-  background-color: transparent;
+h2 code, 
+h3 code, 
+h4 code  {
+  background-color: rgba(0, 0, 0, .02);
   color: inherit;
   font-size: inherit;
 }
