--- a/sass/components/_list-group-post.scss
+++ b/sass/components/_list-group-post.scss
@@ -45,14 +45,11 @@
   &__excerpt {
     font-size: .95rem;
     line-height: 1.4;
-    margin-bottom: calc(map-get($sizes, m) + map-get($sizes, xs));
+    margin-bottom: 1rem;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
     overflow: hidden;
-    @include mq(md) {
-      margin-bottom: calc(map-get($sizes, xl) - map-get($sizes, xs));
-    }
   }
 
   &__version {
@@ -89,7 +86,7 @@
     bottom: .5rem;
     color: inherit;
     @include mq(md) {
-      font-size: 2.5rem;
+      font-size: 1.5rem;
     }
   }
 }
