--- a/sass/components/_wordpress.scss
+++ b/sass/components/_wordpress.scss
@@ -20,21 +20,8 @@ pre.wp-block-code.consola {
   padding-top: 2rem;
   position: relative;
   z-index: 0;
-  &::before {
-    content: ">";
-    position: absolute;
-    left: 0;
-    background: #f0f0f0;
-    width: calc(100% - 2rem);
-    padding: 0.15rem 1rem;
-    font-size: .9rem;
-    top: 2rem;
-    height: 1rem;
-    line-height: 1;
-    border-bottom: 1px solid #d9d9d9;
-  }
   code {
     border-radius: 0 0 .75rem .75rem;
-    padding: 1.5rem 1rem .5rem;
+    padding: .5rem 1rem;
   }
 }
