--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -61,17 +61,17 @@ h2 {
   --rhythm-increase: .32;
 }
 h3 {
-  --font-increase: 1.3;
+  --font-increase: 1;
   --rhythm-increase: .3;
 }
 
 h4 {
-  --font-increase: 1.2;
+  --font-increase: .8;
   --rhythm-increase: .25;
 }
 
 h5 {
-  --font-increase: 1.15;
+  --font-increase: .7;
   --font-increase: 1;
 }
 
