--- a/sass/components/_list-group-post.scss
+++ b/sass/components/_list-group-post.scss
@@ -67,6 +67,7 @@
   &__tags {
     list-style: none;
     display: flex;
+    flex-wrap: wrap;
     font-size: .75rem;
     padding: 0;
     margin: 0;
