--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -64,10 +64,10 @@ h4 code  {
 }
 
 code {
-  background: #F0F0F0;
+  background: #fafafa;
   border-radius: 4px;
   color: rgba(0, 0, 0, .9);
-  font-size: .85rem;
+  font-size: .9rem;
   font-weight: 500;
   padding: .2rem .3rem;
 }
