--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,24 +4,20 @@
 
 .header {
   @include box-shadow(0, 2px, 4px, rgba(0, 0, 0, 0.05));
-  position: fixed;
+  position: relative;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  top: 0;
-  padding: 0;
-  width: 100%;
-  z-index: 2;
 
-  &.hidden {
-    transform: translateY(-100%);
-    transition: transform 0.3s ease;
-  }
+  // &.hidden {
+  //   transform: translateY(-100%);
+  //   transition: transform 0.3s ease;
+  // }
   
-  &.visible {
-    transform: translateY(0);
-    transition: transform 0.3s ease;
-  }
+  // &.visible {
+  //   transform: translateY(0);
+  //   transition: transform 0.3s ease;
+  // }
 
   &__container {
     display: flex;
