--- a/sass/layout/_page.scss
+++ b/sass/layout/_page.scss
@@ -4,6 +4,6 @@
 
 .main-container {
   @include responsive-container();
-  margin-top: calc(map-get($sizes, xxxl) + map-get($sizes, l));
+  margin-top: 1.5rem;
   margin-bottom: map-get($sizes, xl);
 }
