--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -8,6 +8,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  z-index: 2;
 
   // &.hidden {
   //   transform: translateY(-100%);
