--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -78,9 +78,9 @@
     .menu {
       padding: 0 map-get($sizes, l);
       list-style: none;
+      margin: 0;
       @include mq(lg) {
         padding: 0;
-        margin: 0;
       }
     }
   
@@ -125,7 +125,7 @@
         font-size: .9rem;
         color: $text-color;
         line-height: 1.5;
-        padding: .25rem 0;
+        padding: .5rem 0;
         display: block;
         @include mq(lg) {
           line-height: 1.5;
@@ -164,15 +164,23 @@
     a:not([href]) {
       font-weight: 600;
       font-size: .95rem;
+      color: #fff;
+      background: $secondary-color;
+      display: block;
+      padding: .5rem 1.5rem;
+      margin: 0 -1.5rem;
+
       @include mq(lg) {
         font-size: 1rem;
         line-height: 1.35;
         font-weight: 700;
         background: $tertiary-color;
+        color: $text-color;
         display: block;
         position: relative;
         padding: map-get($sizes, s) map-get($sizes, l);
         padding-right: map-get($sizes, xxl);
+        margin: auto;
         cursor: pointer;
         &::after {
           content: "\e908";
