--- a/sass/layout/_post.scss
+++ b/sass/layout/_post.scss
@@ -62,7 +62,9 @@
   &__container {
     a {
       color: inherit;
-      text-decoration: none;
+      &:hover {
+        opacity: .8;
+      }
     }
   }
 
