--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -59,6 +59,19 @@ h1 {
 h2 {
   --font-increase: 1.8;
   --rhythm-increase: .32;
+
+  &.wp-block-heading {
+    position: relative;
+    padding-left: 1rem;
+    &::before {
+      content: '';
+      width: 4px;
+      height: 100%;
+      background: #f0db4f;
+      position: absolute;
+      left: 0;
+    }
+  }
 }
 h3 {
   --font-increase: 1;
