--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -63,6 +63,7 @@ h2 {
   &.wp-block-heading {
     position: relative;
     padding-left: 1rem;
+    margin-top: 2.5rem;
     &::before {
       content: '';
       width: 4px;
