fx text style h2

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -64,6 +64,7 @@ h2 {
     position: relative;
     padding-left: 1rem;
     margin-top: 2.5rem;
+    text-transform: capitalize;
     &::before {
       content: '';
       width: 4px;
