--- a/sass/layout/_page.scss
+++ b/sass/layout/_page.scss
@@ -5,5 +5,5 @@
 .main-container {
   @include responsive-container();
   margin-top: 1.5rem;
-  margin-bottom: map-get($sizes, xl);
+  margin-bottom: 2rem;
 }
