--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -68,6 +68,7 @@
       width: auto;
       height: auto;
       border: 4px solid $secondary-color;
+      border-radius: map-get($sizes, s);
       @include box-shadow-site();
     }
 
