--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -67,7 +67,7 @@ code {
   background: #fafafa;
   border-radius: 4px;
   color: rgba(0, 0, 0, .9);
-  font-size: .9rem;
+  font-size: 1rem;
   font-weight: 500;
   padding: .2rem .3rem;
 }
