--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -5,6 +5,10 @@
 .home {
 
   .main-container {
+    @include responsive-container();
+    margin-top: 1.5rem;
+    margin-bottom: 2rem;
+    
     @include mq(lg) {
       display: grid;
       grid-template-columns: 2.5fr 1fr;
@@ -26,7 +30,7 @@
       a {
         text-decoration: none;
         color: inherit;
-        font-size: .9rem;
+        font-size: .96rem;
         line-height: normal;
         display: flex;
         gap: .25rem;
