--- a/sass/layout/_page.scss
+++ b/sass/layout/_page.scss
@@ -2,8 +2,54 @@
 @use '../abstracts/variables' as *;
 @use '../abstracts/functions' as *;
 
-.main-container {
-  @include responsive-container();
-  margin-top: 1.5rem;
-  margin-bottom: 2rem;
+.page {
+
+  .main-container {
+    @include responsive-container();
+    margin-top: 1.5rem;
+    margin-bottom: 2rem;
+    
+    @include mq(lg) {
+      display: grid;
+      grid-template-columns: 2.5fr 1fr;
+      gap: map-get($sizes, xxl);
+    }
+  }
+
+  &__aside {
+    display: none;
+    @include mq(lg) {
+      display: block;
+      border-left: 4px solid $text-color;
+      ul {
+        list-style-type: none;
+        position: sticky;
+        top: 1rem;
+        padding-left: 1.5rem;
+      }
+      a {
+        text-decoration: none;
+        color: inherit;
+        font-size: .96rem;
+        line-height: normal;
+        display: flex;
+        gap: .25rem;
+        &:hover {
+          text-shadow: 0 0 1px $text-color;
+        }
+        &::before {
+          content: '# ';
+          font-weight: 500;
+          display: flex;
+          align-items: flex-start;
+          height: 100%;
+        }
+      }
+      li {
+        height: 2rem;
+        display: flex;
+        align-items: center;
+      }
+    }
+  }
 }
